--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <body> 
      <div id="wrapper">
         <main id="main">
-        <h1 id="title">GUDETAMA</title>
+        <h1 id="title">GUDETAMA</h1>
         <figure id="img-div">
             <img src="https://e0.pxfuel.com/wallpapers/504/527/desktop-wallpaper-gudetama-egg-from-sanrio-gudetama-the-lazy-egg-is-the-hello-kitty.jpg" alt="gudetama the lazy egg" id="image">
             <figcaption id="img-caption">Gudetama the lazy egg</figcaption>
