--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
  <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Tsukimi+Rounded&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
@@ -13,7 +14,7 @@
         <main id="main">
         <h1 id="title">GUDETAMA</h1>
         <figure id="img-div">
-            <img src="https://e0.pxfuel.com/wallpapers/504/527/desktop-wallpaper-gudetama-egg-from-sanrio-gudetama-the-lazy-egg-is-the-hello-kitty.jpg" alt="gudetama the lazy egg" id="image">
+            <img src="gudeGude.png" alt="gudetama the lazy egg" id="image">
             <figcaption id="img-caption">Gudetama the lazy egg</figcaption>
         </figure>
         <section id="tribute-info">
