--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
  <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>Gudetama the Lazy Egg</title>
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Tsukimi+Rounded&display=swap" rel="stylesheet">
